--- a/src/Mycode/Faster_DFO_with_mean.ipynb
+++ b/src/Mycode/Faster_DFO_with_mean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Jordan Lankford\\AppData\\Local\\Temp\\ipykernel_5552\\2027990685.py:55: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\Jordan Lankford\\AppData\\Local\\Temp\\ipykernel_10316\\2027990685.py:55: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  state_dict = torch.load(model_path)\n"
      ]
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,51 +378,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "f_avrg() missing 1 required positional argument: 'flies_history'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mf_avrg\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: f_avrg() missing 1 required positional argument: 'flies_history'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([np.float64(0.8113)], maxlen=5)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-0.8113)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "f_avrg(f)"
+    "f(flies[0],flies_history[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mflies\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43mflies_history\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[5], line 40\u001b[0m, in \u001b[0;36mf\u001b[1;34m(fly, flies_history, model, env)\u001b[0m\n\u001b[0;32m     37\u001b[0m action_mask \u001b[38;5;241m=\u001b[39m get_mask(info, n_actions\u001b[38;5;241m=\u001b[39menv\u001b[38;5;241m.\u001b[39maction_space\u001b[38;5;241m.\u001b[39mn)\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[1;32m---> 40\u001b[0m     q_values \u001b[38;5;241m=\u001b[39m \u001b[43mcloned_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate_encoded\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maction_mask\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     41\u001b[0m     action \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39margmax(q_values)\u001b[38;5;241m.\u001b[39mitem()\n\u001b[0;32m     43\u001b[0m next_state, reward, terminated, truncated, info \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mstep(action)\n",
-      "File \u001b[1;32mc:\\Users\\Jordan Lankford\\Documents\\GitHub\\choudhary2024icu\\venv\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1496\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1497\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1498\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1499\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1500\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1501\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1502\u001b[0m \u001b[38;5;66;03m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[38;5;241m=\u001b[39m [], []\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "#f(flies[0],flies_history[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +414,7 @@
        "111513"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,76 +437,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MAIN DFO LOOP\n",
-    "\n",
-    "\n",
     "def DFO(start_flies):\n",
-    "\tcounter = 0\n",
-    "\tX = start_flies\n",
-    "\tfitness = [None]*len(start_flies) \n",
+    "    \"\"\"\n",
+    "    Vectorized DFO implementation for DQN weight optimization\n",
+    "    \"\"\"\n",
+    "    #N = len(start_flies)          # Population size\n",
+    "    #D = len(start_flies[0])       # Dimensionality of weights\n",
+    "    #delta = 0.005                 # Disturbance threshold\n",
+    "    #maxIterations = 1000          # Max iterations allowed\n",
     "\n",
-    "\tfor itr in range (maxIterations):\n",
-    "\t\tfor i in range(N): # EVALUATION --- 10 needs to be the population size\n",
-    "\t\t\tfitness[i] = f(X[i], flies_history[i])\n",
-    "\t\ts = np.argmin(fitness) # FIND BEST FLY\n",
+    "    # Initialize population matrix\n",
+    "    X = np.array(start_flies)     # Shape: (N, D)\n",
+    "    fitness = np.zeros(N)         # Array to store fitness values\n",
+    "    flies_history = [deque(maxlen=5) for _ in range(N)]  # History for each fly\n",
     "\n",
-    "\t\n",
-    "\t\t\t\n",
-    "\t\t\n",
-    "\t\t#fitness_history.append(fitness[s])\n",
-    "\t\t#delta_history.append(delta)\n",
+    "    # Initial evaluation of all flies\n",
+    "    for i in range(N):\n",
+    "        fitness[i] = f(X[i], flies_history[i])\n",
+    "    \n",
+    "    # Find initial best fly\n",
+    "    s = np.argmin(fitness)\n",
+    "    \n",
+    "    # Main DFO loop\n",
+    "    for itr in range(maxIterations):\n",
+    "        if itr % 1 == 0:\n",
+    "            print(f\"Iteration: {itr}, Best fly index: {s}, Fitness value: {fitness[s]:.3f}, delta: {delta}\")\n",
     "\n",
-    "\t\tif (itr%1 == 0): # PRINT BEST FLY EVERY 100 ITERATIONS\n",
-    "\t\t\tprint (\"Iteration:\", itr, \"\\tBest fly index:\", s, \n",
-    "\t\t\t\t\"\\tFitness value:\", fitness[s], \"delta: \", delta, \"counter: \", counter)\n",
+    "        # Update each fly except the best one\n",
+    "        for i in range(N):\n",
+    "            if i == s:\n",
+    "                continue  # Skip best fly (elitist strategy)\n",
     "\n",
-    "\t\t# TAKE EACH FLY INDIVIDUALLY \n",
-    "\t\tfor i in range(N): \n",
-    "\t\t\tif i == s: continue # ELITIST STRATEGY\n",
+    "            # Find best neighbor\n",
+    "            left = (i-1) % N\n",
+    "            right = (i+1) % N\n",
+    "            bNeighbour = right if fitness[right] < fitness[left] else left\n",
     "\n",
-    "\t\t\t# FIND BEST NEIGHBOUR\n",
-    "\t\t\tleft = (i-1)%N\n",
-    "\t\t\tright = (i+1)%N\n",
-    "\t\t\tbNeighbour = right if fitness[right]<fitness[left] else left\n",
+    "            # Generate random numbers for vectorized operations\n",
+    "            U = np.random.uniform(0, 1, D)\n",
+    "            R = np.random.uniform(0, 1, D)\n",
     "\n",
-    "\t\t\tfor d in range(D): # UPDATE EACH DIMENSION SEPARATELY \n",
-    "\t\t\t\tif (np.random.rand() < delta):\n",
-    "\t\t\t\t\tX[i][d] = np.random.normal(loc=X[bNeighbour][d], scale=(delta))\n",
-    "\t\t\t\t\t#X[i][d] = np.random.normal(loc=X[bNeighbour][d], scale=(delta**2.0))\t#update between a normal distribution with the mean set to the best neighbours location using a SD of delta squared\n",
-    "\t\t\t\t\tcontinue;\n",
+    "            # Vectorized position update\n",
+    "            X[i] = np.where(R < delta,\n",
+    "                           np.random.normal(loc=X[bNeighbour], scale=delta),\n",
+    "                           X[bNeighbour] + U * (X[s] - X[bNeighbour]))      #if r<delta do random else do the other selfless update\n",
     "\n",
-    "\t\t\t\tu = np.random.rand()\n",
-    "\t\t\t\tX[i][d] = X[bNeighbour][d] + u*(X[s][d] - X[bNeighbour][d])\t#standard fucntion uses current fly location, update will be a seflless method using the best neighbor \n",
+    "            # Evaluate new position\n",
+    "            fitness[i] = f(X[i], flies_history[i])\n",
     "\n",
-    "\t\t\t\t# OUT OF BOUND CONTROL\n",
-    "\t\t\t\t#if X[i][d] < lowerB[d] or X[i][d] > upperB[d]:\n",
-    "\t\t\t\t\t#X[i][d] = np.random.uniform(lowerB[d], upperB[d])\n",
+    "        # Update best fly\n",
+    "        new_s = np.argmin(fitness)\n",
+    "        s = new_s\n",
     "\n",
-    "\tfor i in range(N): fitness[i] = f(X[i], flies_history[i]) # EVALUATION\n",
-    "\tnew_s = np.argmin(fitness) # FIND BEST FLY\n",
-    "\ts = new_s\n",
-    "\treturn(X[s])\n",
-    "\n",
-    "#print(\"\\nFinal best fitness:\\t\", fitness[s])\n",
-    "#print(\"\\nBest fly position:\\n\",  X[s])\t"
+    "    return X[s]  # Return best solution found"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "deque([np.float64(0.8103)], maxlen=5)\n",
-      "Iteration: 0 \tBest fly index: 0 \tFitness value: -0.8103 delta:  0.005 counter:  0\n",
-      "deque([np.float64(0.8103), np.float64(0.8049)], maxlen=5)\n"
+      "deque([np.float64(0.8119)], maxlen=5)\n",
+      "Iteration: 0, Best fly index: 0, Fitness value: -0.812, delta: 0.005\n"
      ]
     }
    ],
@@ -533,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
