--- a/src/Mycode/ParralelFaster_DFO_with_mean.ipynb
+++ b/src/Mycode/ParralelFaster_DFO_with_mean.ipynb
@@ -46,7 +46,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Jordan Lankford\\AppData\\Local\\Temp\\ipykernel_21412\\2027990685.py:55: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\Jordan Lankford\\AppData\\Local\\Temp\\ipykernel_5420\\2027990685.py:55: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  state_dict = torch.load(model_path)\n"
      ]
     }
@@ -188,38 +188,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import numpy as np\n",
-    "import gymnasium as gym\n",
-    "from torchsummary import summary\n",
+    "import multiprocessing as mp\n",
+    "from functools import partial\n",
     "\n",
-    "# Assuming QNetwork and set_seeds are defined earlier in the code\n",
-    "# Assuming the reshape function is defined as needed\n",
-    "\n",
-    "\n",
-    "def f(fly, flies_history, model=q_network,env=env):\n",
-    "    # Clone the model (you don't really need to clone in PyTorch, just create a new instance)\n",
-    "    cloned_model = q_network\n",
+    "def evaluate_batch(process_id, batch_size, model, env_name, fly_weights=None):\n",
+    "    \"\"\"Evaluate a batch of episodes using a single environment instance\"\"\"\n",
+    "    # Create one environment per worker process\n",
+    "    env = gym.make(env_name)\n",
     "    \n",
-    "    # Reshape fly's weights to match the model's weight shape\n",
-    "    reshaped_fly = reshape_to_model_weights(fly, model)\n",
+    "    # If we're using custom weights, apply them\n",
+    "    if fly_weights is not None:\n",
+    "        cloned_model = QNetwork(env)\n",
+    "        cloned_model.load_state_dict(dict(zip([name for name, _ in cloned_model.named_parameters()], fly_weights)))\n",
+    "        model = cloned_model\n",
     "    \n",
-    "    # Load the reshaped weights into the cloned model\n",
-    "    cloned_model.load_state_dict(dict(zip([name for name, _ in cloned_model.named_parameters()], reshaped_fly)))\n",
-    "\n",
-    "    # Set the model to evaluation mode\n",
-    "    cloned_model.eval()\n",
-    "\n",
-    "    # Run the evaluation (similar to what is done in evaluate_network)\n",
-    "    episode_rewards = []\n",
-    "    episode_lengths = []\n",
+    "    model.eval()\n",
     "    \n",
-    "    num_episodes = 10000  # or any other number you'd like to test  USE 10000 FOR STABAL ISH\n",
-    "    for episode in range(num_episodes):\n",
+    "    # Evaluate multiple episodes with the same environment\n",
+    "    rewards = []\n",
+    "    for _ in range(batch_size):\n",
     "        state, info = env.reset()\n",
     "        episode_reward = 0\n",
-    "        steps = 0\n",
     "        done = False\n",
     "        \n",
     "        while not done:\n",
@@ -227,28 +216,75 @@
     "            action_mask = get_mask(info, n_actions=env.action_space.n)\n",
     "            \n",
     "            with torch.no_grad():\n",
-    "                q_values = cloned_model(state_encoded, action_mask)\n",
+    "                q_values = model(state_encoded, action_mask)\n",
     "                action = torch.argmax(q_values).item()\n",
     "            \n",
     "            next_state, reward, terminated, truncated, info = env.step(action)\n",
     "            episode_reward += reward\n",
-    "            steps += 1\n",
     "            state = next_state\n",
     "            done = terminated or truncated\n",
-    "\n",
-    "        episode_rewards.append(episode_reward)\n",
-    "        episode_lengths.append(steps)\n",
+    "        \n",
+    "        rewards.append(episode_reward)\n",
     "    \n",
-    "\n",
-    "    fitness = np.mean(episode_rewards)\n",
-    "    # Return the average reward (or any other metric you want)\n",
-    "    return -f_avrg(fitness, flies_history)\n",
-    "    #return -fitness\n"
+    "    env.close()\n",
+    "    return rewards"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(fly, flies_history, model=q_network, env_name='Sepsis/ICU-Sepsis-v2'):\n",
+    "    # Reshape fly's weights to match the model's weight shape\n",
+    "    reshaped_fly = reshape_to_model_weights(fly, model)\n",
+    "    \n",
+    "    # Number of episodes to evaluate\n",
+    "    num_episodes = 10000\n",
+    "    \n",
+    "    # Number of parallel processes (use your 4 cores)\n",
+    "    num_processes = 4\n",
+    "    \n",
+    "    # Calculate episodes per process\n",
+    "    episodes_per_process = num_episodes // num_processes\n",
+    "    \n",
+    "    # Create a pool of workers\n",
+    "    pool = mp.Pool(processes=num_processes)\n",
+    "    \n",
+    "    # Prepare the function with fixed arguments\n",
+    "    eval_func = partial(evaluate_batch, batch_size=episodes_per_process, \n",
+    "                        model=model, env_name=env_name, fly_weights=reshaped_fly)\n",
+    "    \n",
+    "    # Run evaluations in parallel (each process handles multiple episodes)\n",
+    "    process_rewards = pool.map(eval_func, range(num_processes))\n",
+    "    \n",
+    "    # Flatten the results\n",
+    "    episode_rewards = [reward for batch in process_rewards for reward in batch]\n",
+    "    \n",
+    "    # Close the pool\n",
+    "    pool.close()\n",
+    "    pool.join()\n",
+    "    \n",
+    "    # Calculate fitness\n",
+    "    fitness = np.mean(episode_rewards)\n",
+    "    \n",
+    "    # Return negative fitness (for minimization)\n",
+    "    return -fitness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f(flies[0],flies_history[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,27 +475,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "deque([np.float64(0.8137)], maxlen=5)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(-0.8137)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "f(flies[0],flies_history[0])"
    ]
